# vulkan-mc

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
cmake/: fetch_content.cmake  find_packages.cmake
exec/: CMakeLists.txt
exec/include/: State.hpp  phase_lambdas.hpp
exec/include/backend/: Pipeline.hpp  Window.hpp
exec/include/game/: State.hpp
exec/src/: main.cpp
exec/src/backend/: Pipeline.cpp  Window.cpp
exec/src/game/: State.cpp
lib/: CMakeLists.txt
lib/blocks/: CMakeLists.txt
lib/blocks/include/blocks/: Air.hpp  Block.hpp  Dirt.hpp  Lookup.hpp  types.hpp
lib/blocks/src/: Block.cpp
lib/camera/: CMakeLists.txt
lib/camera/include/camera/: OrthoCamera.hpp  PerspectiveCamera.hpp  camera.hpp  types.hpp
lib/camera/src/: OrthoCamera.cpp  PerspectiveCamera.cpp
lib/dummy/: CMakeLists.txt
lib/dummy/include/dummy/: dummy.hpp
lib/dummy/src/: dummy.cpp
lib/entity/: CMakeLists.txt
lib/entity/include/entity/: CameraComp.hpp  Component.hpp  ControlComp.hpp  MovementComp.hpp  Player.hpp  PositionComp.hpp
lib/gfx/: CMakeLists.txt
lib/gfx/include/gfx/: AABB.hpp  Atlas.hpp  BlockAtlas.hpp  RGBAImage.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Vao.hpp  Vbo.hpp  Window.hpp  controls.hpp  gfx.hpp
lib/gfx/src/: Atlas.cpp  BlockAtlas.cpp  RGBAImage.cpp  Shader.cpp  Texture.cpp  Vao.cpp  Vbo.cpp  Window.cpp  gfx.cpp
lib/render/: CMakeLists.txt
lib/render/include/render/: Renderer.hpp  types.hpp
lib/render/src/: Renderer.cpp
lib/util/: CMakeLists.txt
lib/util/include/util/: Direction.hpp
lib/world/: CMakeLists.txt
lib/world/include/world/: World.hpp
test/: CMakeLists.txt
test/src/: dummy_test.cpp
